src/k3s/base/ssh/10-ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssh
spec:
  ports:
    - protocol: TCP
      name: ssh
      port: 2222
  selector:
    app: ssh
