src/k3s/base/ssh/15-ssh-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ssh
subsets:
  - addresses:
      - ip: 10.5.0.1
    ports:
      - port: 22
